don't use valueOf, old JDK's don't have it